package com.maxqiu.demo.P05_Adapter.Mode1_ClassAdapter;

/**
 * 适配器接口
 * 
 * @author Max_Qiu
 */
public interface IVoltage5V {

    /**
     * 适配器需要实现输出5V电压的功能
     * 
     * @return 5V电压
     */
    Integer output5V();

}
