package com.maxqiu.demo.P05_Adapter.Mode1_ClassAdapter;

/**
 * 220V电压
 * 
 * @author Max_Qiu
 */
public class Voltage220V {

    /**
     * 输出220V的电压
     * 
     * @return 电压
     */
    public Integer output220V() {
        return 220;
    }

}
